--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -33,6 +33,7 @@
         <h4><a href="/post/{{post.id}}">{{post.name}}</a></h4>
       </div>
       <div class="col-md-4">
+        <a href="/post/{{post.id}}?edit=1" class="btn update">UPDATE</a>
         <button class="btn btn-sm btn-danger" data-id="{{post.id}}">DELETE</button>
       </div>
     </div>
