--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,4 +1,23 @@
-<div class="text-center">
+<div class="text-center" id="edit-mode">
+  <p>You can edit this post</p>
+  {{#if logged_in}}
+  <h3>Edit Post</h3>
+  <form class="form update-form">
+      <div class="form-group">
+        <label for="update-message">Post Content:</label>
+        <textarea class="form-input" type="text" id="update-message" required>
+          {{description}}
+        </textarea>
+        <input type="hidden" id="update-post_id" value="{{post_id}}">
+      </div>
+      <div class="form-group">        
+        <button class="btn btn-primary" type="submit">Update</button>
+      </div>
+    </form>
+  {{/if}}
+</div>
+
+<div class="text-center" id="normal-mode">
   <h2>{{name}}</h2>  
   <p>{{description}}</p>
   <p>Created by {{user.username}} on {{format_date date_created}}</p>
